<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        android:visible="false"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_input_add"
        android:title="Add"
        android:visible="false" />
    <item
        android:id="@+id/menu_config"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="Add" />
    <item
        android:id="@+id/menu_here"
        android:title="Nearby" />
</menu>